# role-mentor

./: .gitignore  README.md  pyproject.toml  test.ipynb
src/: models.py
src/backend/: utils.py
src/backend/agents/: supervisor.py
src/backend/api/: app.py
src/backend/api/routers/: agents.py  router_agents.py
src/backend/llms/: base.py  local_llama.py
src/frontend/: api_utils.py  app.py  models.py  utils.py
src/frontend/views/: Home.py  Profile.py
