[project]
name = "role-mentor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "groq>=0.31.1",
    "modal>=1.1.4",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
]
